--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -30,10 +30,10 @@
     </div>
     <div class="navbar-end gap-2 px-2">
         {% if title == 'Library' %}
-        <div class="form-control hidden md:block relative group">
+        <div class="form-control relative group flex-grow md:flex-none">
             <div class="relative">
                 <input type="text" id="navbarSearch" placeholder="{{ t('Search titles...') }}"
-                    class="input input-bordered input-sm w-32 md:w-64 focus:w-80 transition-all duration-300 pr-8"
+                    class="input input-bordered input-sm w-full md:w-64 focus:md:w-80 transition-all duration-300 pr-8"
                     list="gameTitlesList" />
                 <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none opacity-50">
                     <i class="bi bi-search text-xs"></i>
